--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,7 +12,8 @@
         android:text="Fitness Program"
         android:id="@+id/button"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -21,7 +22,8 @@
         android:id="@+id/button3"
         android:layout_below="@+id/button"
         android:layout_alignEnd="@+id/button"
-        android:layout_alignStart="@+id/button" />
+        android:layout_alignStart="@+id/button"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -30,25 +32,28 @@
         android:id="@+id/button4"
         android:layout_below="@+id/button3"
         android:layout_alignEnd="@+id/button3"
-        android:layout_alignStart="@+id/button3" />
+        android:layout_alignStart="@+id/button3"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Track Progress"
         android:id="@+id/button5"
-        android:layout_below="@+id/button4"
-        android:layout_alignEnd="@+id/button3"
-        android:layout_alignStart="@+id/button4" />
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/button4"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Points"
         android:id="@+id/button6"
-        android:layout_below="@+id/button5"
-        android:layout_alignStart="@+id/button4"
-        android:layout_alignEnd="@+id/button5" />
+        android:layout_above="@+id/button2"
+        android:layout_marginBottom="67dp"
+        android:layout_alignStart="@+id/button5"
+        android:layout_alignEnd="@+id/button5"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -56,5 +61,6 @@
         android:text="Back"
         android:id="@+id/button2"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:clickable="true" />
 </RelativeLayout>
