--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,36 +4,40 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
-    android:background="#ff0e15">
+    android:background="#ff0e15"
+    android:id="@+id/">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Fitness Program"
         android:id="@+id/button"
+        android:clickable="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:clickable="true" />
+        android:layout_marginTop="17dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BMI"
         android:id="@+id/button3"
-        android:layout_below="@+id/button"
-        android:layout_alignEnd="@+id/button"
+        android:clickable="true"
+        android:layout_above="@+id/button4"
         android:layout_alignStart="@+id/button"
-        android:clickable="true" />
+        android:layout_marginBottom="20dp"
+        android:layout_alignEnd="@+id/button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nutrition"
         android:id="@+id/button4"
-        android:layout_below="@+id/button3"
-        android:layout_alignEnd="@+id/button3"
+        android:clickable="true"
+        android:layout_above="@+id/button5"
         android:layout_alignStart="@+id/button3"
-        android:clickable="true" />
+        android:layout_marginBottom="17dp"
+        android:layout_alignEnd="@+id/button3" />
 
     <Button
         android:layout_width="wrap_content"
@@ -42,18 +46,19 @@
         android:id="@+id/button5"
         android:layout_centerVertical="true"
         android:layout_alignStart="@+id/button4"
-        android:clickable="true" />
+        android:clickable="true"
+        android:layout_alignEnd="@+id/button4" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Points"
         android:id="@+id/button6"
-        android:layout_above="@+id/button2"
-        android:layout_marginBottom="67dp"
+        android:clickable="true"
+        android:layout_below="@+id/button5"
         android:layout_alignStart="@+id/button5"
-        android:layout_alignEnd="@+id/button5"
-        android:clickable="true" />
+        android:layout_marginTop="19dp"
+        android:layout_alignEnd="@+id/button4" />
 
     <Button
         android:layout_width="wrap_content"
@@ -63,4 +68,13 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:clickable="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button7"
+        android:layout_below="@+id/button"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="431dp" />
 </RelativeLayout>
