--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -49,18 +49,10 @@
         android:layout_height="wrap_content"
         android:text="Points"
         android:id="@+id/button6"
-        android:layout_above="@+id/button2"
-        android:layout_marginBottom="67dp"
+        android:clickable="true"
+        android:layout_below="@+id/button5"
         android:layout_alignStart="@+id/button5"
-        android:layout_alignEnd="@+id/button5"
-        android:clickable="true" />
+        android:layout_marginTop="73dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:clickable="true" />
+
 </RelativeLayout>
