--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,38 +11,42 @@
         android:layout_height="wrap_content"
         android:text="Fitness Program"
         android:id="@+id/button"
+        android:clickable="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:clickable="true" />
+        android:layout_marginTop="39dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BMI"
         android:id="@+id/button3"
+        android:clickable="true"
         android:layout_below="@+id/button"
-        android:layout_alignEnd="@+id/button"
         android:layout_alignStart="@+id/button"
-        android:clickable="true" />
+        android:layout_marginTop="40dp"
+        android:layout_alignEnd="@+id/button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nutrition"
         android:id="@+id/button4"
-        android:layout_below="@+id/button3"
-        android:layout_alignEnd="@+id/button3"
+        android:clickable="true"
+        android:layout_centerVertical="true"
         android:layout_alignStart="@+id/button3"
-        android:clickable="true" />
+        android:layout_alignEnd="@+id/button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Track Progress"
         android:id="@+id/button5"
-        android:layout_centerVertical="true"
+        android:clickable="true"
+        android:layout_marginTop="38dp"
+        android:layout_below="@+id/button4"
         android:layout_alignStart="@+id/button4"
-        android:clickable="true" />
+        android:layout_alignEnd="@+id/button4" />
 
     <Button
         android:layout_width="wrap_content"
@@ -50,9 +54,10 @@
         android:text="Points"
         android:id="@+id/button6"
         android:clickable="true"
+        android:layout_marginTop="39dp"
         android:layout_below="@+id/button5"
         android:layout_alignStart="@+id/button5"
-        android:layout_marginTop="73dp" />
+        android:layout_alignEnd="@+id/button4" />
 
 
 </RelativeLayout>
