--- a/app/src/main/res/layout/activity_fitness_program.xml
+++ b/app/src/main/res/layout/activity_fitness_program.xml
@@ -4,15 +4,87 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.sc.myapplication.FitnessProgram">
+    tools:context="edu.sc.myapplication.FitnessProgram"
+
+    android:background="#fffe5e">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Strength"
+        android:text="Choose your Fitness Program:"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Strength Training"
+        android:id="@+id/button2"
+        android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="54dp" />
+        android:layout_marginTop="94dp"
+        android:background="#ff3c39" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BodyBuilding"
+        android:id="@+id/button7"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/button2"
+        android:layout_alignEnd="@+id/button2"
+        android:background="#2c6bff" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Weight Loss"
+        android:id="@+id/button8"
+        android:layout_marginTop="47dp"
+        android:layout_below="@+id/button7"
+        android:layout_alignStart="@+id/button7"
+        android:layout_alignEnd="@+id/button2"
+        android:background="#8bff14" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Get stronger with FitLivin!"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/button2"
+        android:layout_alignEnd="@+id/textView"
+        android:textColor="#010101" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Obtain a more aesthetic physique!"
+        android:id="@+id/textView7"
+        android:layout_below="@+id/button7"
+        android:layout_alignStart="@+id/textView6"
+        android:textColor="#030303" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Lose weight and get in better shape!"
+        android:id="@+id/textView8"
+        android:layout_below="@+id/button8"
+        android:layout_alignStart="@+id/textView7"
+        android:textColor="#070707" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Based on your Individual Goals"
+        android:id="@+id/textView9"
+        android:layout_below="@+id/textView"
+        android:layout_alignEnd="@+id/textView" />
+
 </RelativeLayout>
