--- a/app/src/main/res/layout/activity_fitness_program.xml
+++ b/app/src/main/res/layout/activity_fitness_program.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="edu.sc.myapplication.FitnessProgram"
 
-    android:background="#fffe5e">
+    android:background="@layout/background2">
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
         android:id="@+id/textView6"
         android:layout_below="@+id/button2"
         android:layout_alignEnd="@+id/textView"
-        android:textColor="#010101" />
+        android:textColor="@android:color/white" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -66,7 +66,7 @@
         android:id="@+id/textView7"
         android:layout_below="@+id/button7"
         android:layout_alignStart="@+id/textView6"
-        android:textColor="#030303" />
+        android:textColor="@android:color/white" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -76,7 +76,7 @@
         android:id="@+id/textView8"
         android:layout_below="@+id/button8"
         android:layout_alignStart="@+id/textView7"
-        android:textColor="#070707" />
+        android:textColor="@android:color/white" />
 
     <TextView
         android:layout_width="wrap_content"
