--- a/app/src/main/res/layout/activity_bmical.xml
+++ b/app/src/main/res/layout/activity_bmical.xml
@@ -4,14 +4,115 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@layout/background2"
     tools:context="edu.sc.myapplication.BMICAL">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="BMI CALCULATOR"
+        android:text="Enter your age:"
+        android:id="@+id/textView10"
+        android:textColor="@android:color/black"
+        android:background="#fefcfc"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="47dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_alignTop="@+id/textView10"
+        android:layout_toEndOf="@+id/textView10" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/editText2"
+        android:background="@android:color/white"
+        android:layout_alignTop="@+id/editText"
+        android:layout_toEndOf="@+id/editText"
+        android:layout_alignBottom="@+id/editText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Enter your height:"
         android:id="@+id/textView2"
-        android:layout_marginTop="58dp" />
+        android:layout_below="@+id/editText"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="49dp"
+        android:textColor="@android:color/black"
+        android:background="@android:color/white" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText3"
+        android:textColor="@android:color/black"
+        android:text="Feet"
+        android:background="@android:color/white"
+        android:layout_alignTop="@+id/editText4"
+        android:layout_toStartOf="@+id/editText4" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText4"
+        android:background="@android:color/white"
+        android:text="inches"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignEnd="@+id/editText2" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText5"
+        android:layout_centerVertical="true"
+        android:layout_alignEnd="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:text="Enter your weight:"
+        android:background="@android:color/white" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText6"
+        android:layout_alignTop="@+id/editText5"
+        android:layout_alignEnd="@+id/editText4"
+        android:background="@android:color/white"
+        android:text="                    " />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Gender: "
+        android:id="@+id/textView11"
+        android:layout_marginTop="45dp"
+        android:background="@android:color/white"
+        android:layout_below="@+id/editText5"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculate BMI"
+        android:id="@+id/button9"
+        android:layout_below="@+id/textView11"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText7"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/button9"
+        android:text="Your BMI is:           "
+        android:background="@android:color/white" />
 
 </RelativeLayout>
