--- a/app/src/main/res/layout/activity_bmical.xml
+++ b/app/src/main/res/layout/activity_bmical.xml
@@ -115,4 +115,11 @@
         android:text="Your BMI is:           "
         android:background="@android:color/white" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText8"
+        android:layout_below="@+id/button9"
+        android:layout_alignStart="@+id/editText7" />
+
 </RelativeLayout>
