--- a/app/src/main/res/layout/activity_bmical.xml
+++ b/app/src/main/res/layout/activity_bmical.xml
@@ -122,4 +122,22 @@
         android:layout_below="@+id/button9"
         android:layout_alignStart="@+id/editText7" />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Male"
+        android:id="@+id/checkBox"
+        android:layout_above="@+id/button9"
+        android:layout_toEndOf="@+id/textView11"
+        android:checked="false" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Female"
+        android:id="@+id/checkBox2"
+        android:layout_above="@+id/button9"
+        android:layout_toStartOf="@+id/editText3"
+        android:checked="true" />
+
 </RelativeLayout>
