--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
-    android:background="@layout/background2">
+    android:background="#ff3c39">
 
     <Button
         android:layout_width="wrap_content"
@@ -13,8 +13,7 @@
         android:id="@+id/button"
         android:clickable="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -33,9 +32,9 @@
         android:text="Nutrition"
         android:id="@+id/button4"
         android:clickable="true"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/button3"
-        android:layout_alignEnd="@+id/button" />
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/button3"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -58,6 +57,14 @@
         android:layout_below="@+id/button5"
         android:layout_alignStart="@+id/button5"
         android:layout_alignEnd="@+id/button4" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Profile"
+        android:id="@+id/button7"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/button6" />
 
 
 </RelativeLayout>
