--- a/app/src/main/res/layout/activity_bmical.xml
+++ b/app/src/main/res/layout/activity_bmical.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#ff3c39"
+    android:background="@layout/background2"
     tools:context="edu.sc.myapplication.BMICAL">
 
     <TextView
