--- a/app/src/main/res/layout/activity_fitness_program.xml
+++ b/app/src/main/res/layout/activity_fitness_program.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="edu.sc.myapplication.FitnessProgram"
 
-    android:background="#ff3c39">
+    android:background="@layout/background2">
 
     <TextView
         android:layout_width="wrap_content"
