--- a/app/src/main/res/layout/activity_fp__str__training.xml
+++ b/app/src/main/res/layout/activity_fp__str__training.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@layout/background2"
     tools:context="edu.sc.myapplication.FP_STR_Training">
 
     <TextView
