--- a/app/src/main/res/layout/activity_profile__page.xml
+++ b/app/src/main/res/layout/activity_profile__page.xml
@@ -49,7 +49,20 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textView15"
-        android:layout_alignBottom="@+id/editText11"
         android:layout_below="@+id/editText11"
-        android:layout_alignEnd="@+id/editText11" />
+        android:layout_marginTop="50dp"
+        android:layout_alignEnd="@+id/editText11"
+        android:layout_above="@+id/button10"
+        android:layout_alignStart="@+id/editText11"
+        android:background="#46ff41"
+        android:textColor="#fdffe2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home"
+        android:id="@+id/button11"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
