Strength Training page switched it to buttons

--- a/app/src/main/res/layout/activity_fp__body__building.xml
+++ b/app/src/main/res/layout/activity_fp__body__building.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Body Building"
+        android:text=" Body Building "
         android:id="@+id/textView13"
+        android:background="@android:color/white"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="138dp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
