--- a/app/src/main/res/layout/activity_fp__str__training.xml
+++ b/app/src/main/res/layout/activity_fp__str__training.xml
@@ -17,58 +17,48 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text=" Day 1 "
-        android:id="@+id/textView16"
+        android:id="@+id/button12"
         android:layout_below="@+id/textView12"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:background="@android:color/white" />
+        android:layout_marginTop="46dp" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text=" Day 2 "
-        android:id="@+id/textView17"
-        android:layout_marginTop="42dp"
-        android:layout_below="@+id/textView16"
-        android:layout_alignStart="@+id/textView16"
-        android:layout_alignEnd="@+id/textView16"
-        android:background="@android:color/white" />
+        android:id="@+id/button13"
+        android:layout_marginTop="46dp"
+        android:layout_below="@+id/button12"
+        android:layout_alignStart="@+id/button12" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text=" Day 3 "
-        android:id="@+id/textView18"
-        android:background="@android:color/white"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/textView17" />
+        android:id="@+id/button14"
+        android:layout_below="@+id/button13"
+        android:layout_alignStart="@+id/button13"
+        android:layout_marginTop="40dp" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text=" Day 4 "
-        android:id="@+id/textView19"
-        android:layout_marginTop="44dp"
-        android:background="@android:color/white"
-        android:layout_below="@+id/textView18"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/button15"
+        android:layout_below="@+id/button14"
+        android:layout_alignStart="@+id/button14"
+        android:layout_marginTop="44dp" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text=" Day 5 "
-        android:id="@+id/textView20"
-        android:layout_marginTop="40dp"
-        android:background="@android:color/white"
-        android:layout_below="@+id/textView19"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/button16"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/button15" />
+
 </RelativeLayout>
