--- a/app/src/main/res/layout/activity_fp__body__building.xml
+++ b/app/src/main/res/layout/activity_fp__body__building.xml
@@ -16,4 +16,46 @@
         android:background="@android:color/white"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" Day 1 "
+        android:id="@+id/button17"
+        android:layout_below="@+id/textView13"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="42dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" Day 2 "
+        android:id="@+id/button18"
+        android:layout_below="@+id/button17"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" Day 3 "
+        android:id="@+id/button19"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" Day 4 "
+        android:id="@+id/button20"
+        android:layout_below="@+id/button19"
+        android:layout_alignStart="@+id/button19" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" Day 5 "
+        android:id="@+id/button21"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/button20"
+        android:layout_marginBottom="46dp" />
 </RelativeLayout>
