--- a/app/src/main/res/layout/activity_fp__str__training.xml
+++ b/app/src/main/res/layout/activity_fp__str__training.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/background2"
-    tools:context="edu.sc.myapplication.FP_STR_Training">
+    tools:context="edu.sc.myapplication.FP_STR_TrainingFragment">
 
     <TextView
         android:layout_width="wrap_content"
