--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.sc.myapplication.FitnessProgram"
+    tools:context="edu.sc.myapplication.FitnessProgramFragment"
 
     android:background="@drawable/background2">
 
@@ -86,5 +86,10 @@
         android:id="@+id/textView9"
         android:layout_below="@+id/textView"
         android:layout_alignEnd="@+id/textView" />
+
+
+
+
+
 
 </RelativeLayout>
