--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
-    android:background="@drawable/background2">
+    android:background="@drawable/background2"
+    android:onClick="ChangeFragment">
 
     <Button
         android:layout_width="wrap_content"
@@ -13,7 +14,8 @@
         android:id="@+id/button"
         android:clickable="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="ChangeFragment" />
 
     <Button
         android:layout_width="wrap_content"
@@ -65,6 +67,15 @@
         android:id="@+id/button7"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/button6" />
+
+      <fragment
+          android:name="edu.sc.myapplication.FitnessProgramFragment"
+          android:id="@+id/fragment_place"
+          android:layout_height="match_parent"
+          android:layout_width="match_parent"
+
+          android:layout_toEndOf="@+id/button4"
+          android:layout_alignTop="@+id/button4"></fragment>
 
 
 </RelativeLayout>
