--- a/app/src/main/res/layout/fragment_nutrition_cal.xml
+++ b/app/src/main/res/layout/fragment_nutrition_cal.xml
@@ -1,11 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+    android:id="@+id/containerFitnessP"
     android:background="@drawable/background2"
-    tools:context="edu.sc.myapplication.NutritionCal">
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,5 +13,6 @@
         android:id="@+id/textView3"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="69dp" />
-</RelativeLayout>
+        android:layout_marginTop="69dp"
+        android:background="#f1ffee" />
+</FrameLayout>
