--- a/app/src/main/res/menu/menu_nutrition_cal.xml
+++ b/app/src/main/res/menu/menu_nutrition_cal.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="edu.sc.myapplication.NutritionCal">
+    tools:context="edu.sc.myapplication.NutritionCalFragment">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
