Added Back button on BMI page

--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -5,62 +5,28 @@
     android:background="@drawable/background2"
     >
 
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
         android:id="@+id/editText9"
-        android:hint="Username"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:background="#60ff59" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText10"
-        android:layout_below="@+id/editText9"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="51dp"
-        android:hint="Weight"
-        android:background="#42ff21" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText11"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:hint="Height in Inches"
-        android:background="#6fff2f" />
+        android:layout_gravity="center_horizontal|top"
+        android:hint="weight"
+        android:background="#fcffd4" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set"
-        android:id="@+id/button10"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/editText9"
-        android:layout_marginBottom="61dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView15"
-        android:layout_below="@+id/editText11"
-        android:layout_marginTop="50dp"
-        android:layout_alignEnd="@+id/editText11"
-        android:layout_above="@+id/button10"
-        android:layout_alignStart="@+id/editText11"
-        android:background="#46ff41"
-        android:textColor="#fdffe2" />
+        android:text="Save"
+        android:id="@+id/button2"
+        android:layout_gravity="center" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home"
-        android:id="@+id/button11"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
+        android:text="BMI"
+        android:id="@+id/button7"
+        android:layout_gravity="center_horizontal|bottom" />
 </FrameLayout>
