--- a/app/src/main/res/layout/fragment_bmical.xml
+++ b/app/src/main/res/layout/fragment_bmical.xml
@@ -5,138 +5,27 @@
     android:background="@drawable/background2"
     >
 
+
     <TextView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Enter your age:"
-        android:id="@+id/textView10"
-        android:textColor="@android:color/black"
-        android:background="#fefcfc"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="47dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_alignTop="@+id/textView10"
-        android:layout_toEndOf="@+id/textView10" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText2"
-        android:background="@android:color/white"
-        android:layout_alignTop="@+id/editText"
-        android:layout_toEndOf="@+id/editText"
-        android:layout_alignBottom="@+id/editText" />
+        android:layout_width="156dp"
+        android:layout_height="74dp"
+        android:text="New Text"
+        android:id="@+id/textView15"
+        android:layout_gravity="center"
+        android:background="#ccffde" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Enter your height:"
+        android:layout_height="170dp"
+        android:text="Your BMI IS:"
         android:id="@+id/textView2"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="49dp"
-        android:textColor="@android:color/black"
-        android:background="@android:color/white" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:textColor="@android:color/black"
-        android:text="Feet"
-        android:background="@android:color/white"
-        android:layout_alignTop="@+id/editText4"
-        android:layout_toStartOf="@+id/editText4" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText4"
-        android:background="@android:color/white"
-        android:text="inches"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignEnd="@+id/editText2" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText5"
-        android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:text="Enter your weight:"
-        android:background="@android:color/white" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText6"
-        android:layout_alignTop="@+id/editText5"
-        android:layout_alignEnd="@+id/editText4"
-        android:background="@android:color/white"
-        android:text="                    " />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Gender: "
-        android:id="@+id/textView11"
-        android:layout_marginTop="45dp"
-        android:background="@android:color/white"
-        android:layout_below="@+id/editText5"
-        android:layout_alignParentStart="true" />
+        android:layout_gravity="center_horizontal|top"
+        android:textColor="#fffef7" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calculate BMI"
-        android:id="@+id/button9"
-        android:layout_below="@+id/textView11"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText7"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/button9"
-        android:text="Your BMI is:           "
-        android:background="@android:color/white" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText8"
-        android:layout_below="@+id/button9"
-        android:layout_alignStart="@+id/editText7" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Male"
-        android:id="@+id/checkBox"
-        android:layout_above="@+id/button9"
-        android:layout_toEndOf="@+id/textView11"
-        android:checked="false" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Female"
-        android:id="@+id/checkBox2"
-        android:layout_above="@+id/button9"
-        android:layout_toStartOf="@+id/editText3"
-        android:checked="true" />
-
+        android:text="BACK"
+        android:id="@+id/button8"
+        android:layout_gravity="center_horizontal|bottom" />
 </FrameLayout>
