--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -6,6 +6,14 @@
     >
 
     <TextView
+        android:layout_width="157dp"
+        android:layout_height="51dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="You Have:"
+        android:id="@+id/textView10"
+        android:layout_gravity="left|center_vertical" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -14,5 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="121dp"
-        android:background="#f4ffe3" />
+        android:background="#f4ffe3"
+        android:layout_gravity="center" />
+
 </FrameLayout>
